# QuizMaster

./: .env.example  .gitignore  ENHANCED_QA_SYSTEM.md  ENHANCED_QBANK_FEATURES.md  INTEGRATION_COMPLETE.md  MODULAR_API_DOCS.md  PROJECT_COMPLETE.md  PROJECT_PLAN.md  PROJECT_READY.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  complete_pipeline_question_bank.json  env.example  exam_assistant.py  example_modular_usage.py  interactive_study_session.py  lightrag_test_report.json  main.py  main.py.backup  main_clean.py  output.json  pyproject.toml  quick_start_example.py  test.py  test_complete_qbank_integration.py  test_lightrag_comprehensive.py  test_modular_api.py  test_phase3.py  test_phase4.py  test_pipeline.py  test_qbank_integration.py
.continue/rules/: new-rule.md
bookworm_workspace/mindmaps/0cd5dd8e-7182-4a21-9dae-460d6029b779/: sample_document_mindmap.html  sample_document_mindmap.mmd  sample_document_outline.md
bookworm_workspace/mindmaps/32221237-396c-4361-b23a-b0cb44707c5f/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/34de47e3-8c8f-4963-9817-b0e3151d674d/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/3f6e333e-219e-42fa-8907-996358cfd384/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/45cd40ea-0738-45ec-b1a0-5b996016537a/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/59a4ebb1-b7f0-4a85-bfb9-26b075125766/: sample_document_mindmap.html  sample_document_mindmap.mmd  sample_document_outline.md
bookworm_workspace/mindmaps/5fdb6d34-15c1-4092-a27e-32b7e2b46129/: sample_document_mindmap.html  sample_document_mindmap.mmd  sample_document_outline.md
bookworm_workspace/mindmaps/7738fd70-ee17-443e-98ba-4b2705582a1a/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/88695dd8-b35d-4a98-893b-20ccc21605a4/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/8b027001-d7ff-48c0-a2c5-b9c8884e81cc/: test_document_mindmap.html  test_document_outline.md
bookworm_workspace/mindmaps/931959c7-acf3-455a-8337-7f294b93d44e/: test_document_mindmap.html  test_document_mindmap.mmd  test_document_outline.md
bookworm_workspace/mindmaps/958c898b-5b0f-4cc7-a554-fc4b75228ff1/: sample_document_outline.md
bookworm_workspace/mindmaps/9dba1354-d22d-492b-b5e3-80df05d3596d/: test_document_mindmap.html  test_document_mindmap.mmd
bookworm_workspace/mindmaps/a0e1283f-911d-47bb-8b26-68e201e50599/: sample_document_mindmap.html  sample_document_mindmap.mmd  sample_document_outline.md
bookworm_workspace/mindmaps/b055c572-9cbc-4ccc-9209-6967eb073b7c/: test_document_mindmap.html  (+2 more)
bookworm_workspace/processed_docs/: 12f45a39-f057-4843-8d9d-c8fe79600a45_test_doc.txt  d190c8d4-361a-43cb-a2a8-52a2fc7dc496_sample_document.txt
examples/: DEMO_RESULTS.md  README.md  advanced_scenario_demo.py  basic_question_generation.py  basic_usage.py  complete_integration_demo.py  complete_pipeline_demo.py  enhanced_qbank_features.py  improved_lightrag_demo.py  integration_test.py  lightrag_integration_demo.py  simple_graphwalker_demo.py  simple_pipeline_test.py
output/: cli_graphwalker_test.json  combined_deep_analysis.json  final_enhanced_test.json  final_test.json  financial_services_pure_20_questions.json  financial_services_ragas_10_questions.json  medical_sciences_pure_19_questions.json  query_generation_test.json  quick_test.json  real_graphwalker_test.json  simple_test.json  test_fixed_system.json
output/cli_test/: multiple_choice_questions.json  qbank_import.json  qbank_questions.json
output/phase3_test/: curious_questions.json  educational_reports.json  quiz_questions.json
output/phase4_complete/: multiple_choice_questions.json  pipeline_summary.json  qbank_import.json  qbank_questions.json
output/qbank/: multiple_choice_questions.json  qbank_import.json  qbank_questions.json
output/test_results/: test_document_mindmap.md  test_document_processed.txt
quizmaster/: __init__.py  bookworm_integration.py  cli.py  config.py  core.py  core_api.py  generator.py  pipeline.py  processor.py  qbank_integration.py  question_generator.py
quizmaster/cli/: __init__.py
quizmaster/core/: config.py  graphwalker_integration.py  graphwalker_query_generator.py  graphwalker_simple.py  integration.py  knowledge_extractor.py  question_generator.py  real_graphwalker.py  scenario_generator.py  types.py
quizmaster/models/: knowledge_graph.py  question.py
test_output/: output.json  qbank_1.json
tests/: __init__.py  test_basic.py  test_smoke.py
workspace/processed_docs/: 473c5f1d-52ff-4a5d-9856-ffd1884cd031_SIE_truncated.txt
(+15 files in other folders)
