[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quizmaster*"]

[project]
name = "quizmaster"
version = "0.1.0"
description = "A standalone module that integrates Ragas question generation with LightRAG knowledge graphs and qBank for human-friendly question banks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragas>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "aiofiles>=23.0.0",
    "tqdm>=4.65.0",
    "dataclasses-json>=0.6.0",
    "qbank @ git+https://github.com/haxx0rman/qBank.git",
    "lightrag-hku>=1.4.0",
    "ollama>=0.5.2",
    "faiss-cpu>=1.11.0.post1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "graphwalker",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
quizmaster = "main:cli_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.sources]
graphwalker = { git = "https://github.com/haxx0rman/GraphWalker.git" }
